@@ -110,6 +110,9 @@ typedef struct magic_api_t {
      SDL_MustLockSurface() can tell you whether a surface needs to be locked. */
   void (*putpixel)(SDL_Surface *, int, int, Uint32);
 
+  /* XOR's the pixel at (x,y) location of the surface. */
+  Uint32 (*xorpixel)(SDL_Surface *, int, int);
+
   /* Asks Tux Paint to play a sound (one loaded via SDL_mixer library);
      the first value is for left/right panning (0 is left, 128 is center,
      255 is right); the second value is for total volume (0 is off, 255 is
